# Books_base

./: .env.dist  .env.template  .gitignore  Dockerfile  README.md  bot.py  config.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 2024_03_14_1117-944406dd5f54_create_table.py  2024_04_02_2129-76b26921da04_crate_tables.py  2024_04_03_1007-14e2e1960ee3_crate_tables.py  2024_04_03_1032-42fa42050ece_crate_tables.py  2024_04_03_1107-1bda5c428b83_crate_tables.py  2024_04_03_1129-58b4f0d9df1d_crate_tables.py  2024_04_03_1152-7435f526b124_crate_tables.py  2024_04_04_1025-0a602e9150b9_crate_tables.py  2024_04_04_1040-9944dbcaa08b_crate_tables.py  2024_04_04_1054-9d6df7e4c536_crate_tables.py  2024_10_23_2108-264ce9af47df_create_tables.py  2024_10_26_1731-a79ce5663c40_create_tables.py  2024_10_29_2109-2f7eb908855b_create_tables.py  2024_12_16_2034-c0682b0434ea_fix_language_code.py  2024_12_17_2300-a05c2bf17175_added_referrer_id_for_user.py  2025_01_26_2126-54662db40d38_update_language_code_and_referrer_id.py
api/: Dockerfile  app.py
api/books_base_api/: api.py
api/tests/: conftest.py  test.db  test_admins.py  test_genres.py  test_orders.py  test_users.py
database/: __init__.py  db_helper.py
database/models/: __init__.py  admin.py  article.py  author.py  base.py  blacklist.py  book.py  book_author.py  book_file.py  book_genre.py  book_payment.py  discount.py  file.py  genre.py  order.py  payment.py  premium.py  user.py
infrastructure/books_base_api/: __init__.py  api.py  api_response.py  base.py  book_api.py  booking_api.py  bookings_api.py  books_base_api.py  user_api.py
infrastructure/database/: setup.py
scripts/alembic/: create_alembic.sh  create_migrations.sh  run_migrations.sh
tests/: conftest.py  test.db  test_admins.py  test_articles.py  test_authors.py  test_blacklist.py  test_books.py  test_discounts.py  test_orders.py  test_payments.py  test_premium.py  test_users.py
tg_bot/: .env.template  config.py  main.py
tg_bot/api_client/: api.py
tg_bot/enums/: __init__.py  message_effect.py  message_effects.py  search_by.py
tg_bot/filters/: admin.py  super_admin.py
tg_bot/handlers/: __init__.py
tg_bot/middlewares/: __init__.py  blacklist.py  clear_keyboard.py  database.py  localization.py  premium.py  reset_state.py  saturday.py  throttling.py
tg_bot/schemas/: __init__.py  article.py  author.py  book.py  discount.py  genre.py  payment.py  premium.py  user_id.py
tg_bot/services/: __init__.py  bot_commands.py  bot_description.py  clear_keyboard.py  convert_utc_datetime.py  create_user_link.py  extract_username.py  find_user.py  generate_book_caption.py  generate_id_order.py  get_user_localization.py  parse_and_format_files.py  payment.py  saturday_post.py  send_files.py
tg_bot/states/: __init__.py  add_admin.py  add_article.py  broadcast.py  cancel_premium.py  (+13 more)
tgbot/: bot.py  config.py
(+1175 files in other folders)
