[project]
name = "books-base"
version = "0.1.0"
description = ""
authors = [
    {name = "sonic_72_kon",email = "kko160305@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiogram (>=3.17.0,<4.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "betterlogging (>=1.0.0,<2.0.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "backoff (>=2.2.1,<3.0.0)",
    "ujson (>=5.10.0,<6.0.0)",
    "fluent-runtime (>=0.4.0,<0.5.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "fastapi (>=0.115.7,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "sqlalchemy[asyncio] (>=2.0.37,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-asyncio (>=0.25.2,<0.26.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiosqlite (>=0.20.0,<0.21.0)",
    "orjson (>=3.10.15,<4.0.0)",
    "rapidfuzz (>=3.11.0,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "aiomoney (>=3.0.2,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

